--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -467,5 +467,6 @@
 
     %grid-summaries {
         display: flex;
+        background: inherit;
     }
 }
